# ozone

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.sh  docker-compose.yml  nodemon.json  package-lock.json  package.json  tsconfig.json
docs/: Coding Standards.md
docs/00-09 Metadata/01 About/: 01.01 Colophon.md  01.04 Version.md  01.05 Note Organization.md
entities/: Cargo.toml
entities/src/: discord_source.rs  lib.rs  prelude.rs  sea_orm_active_enums.rs
environment/: README.md
frontend/: package.json
frontend/src/pages/: _app.tsx
migration/src/: lib.rs  m20231119_141700_create_discord_source_table.rs
prisma/: schema.prisma
prisma/migrations/20230220003034_/: migration.sql
public/data/: arcTags.json  arcs.json  discordAccounts.json  posts.json  sceneTags.json  scenes.json  tags.json  universe.json  universeTags.json  universes.json  users.json
react-server/: package.json  start-server.sh
react-server/src/pages/: _document.tsx  index.tsx
server/: index.js  package.json  tslint.json
server/src/: index.ts
src/: app.ts  config.ts  database.rs  discord_bot.rs  gql.ts  main.rs
src/commands/: weather.ts
src/components/: Post.tsx  PostContainer.tsx
src/discord/: Ozone.ts  channel.rs  commands.rs  mod.rs  source.rs
src/glean/: mod.rs  weather.rs
src/models/: mongodb.ts
src/ozone/: Ozone.ts  weather.ts
src/ozone_bot/: bot.ts  ego.ts  initialize.ts  mongoose.ts  rp-reader.ts
src/pages/: _app.tsx  index.tsx
src/utilities/: index.ts  request.ts
src/webserver/: mod.rs
src_ts/discord/: connection.ts
src_ts/pages/: index.tsx
(+31 files in other folders)
