[package]
name = "ozone"
version = "0.2.0"
edition = "2021"

[workspace]
members = [".", "entities", "migration"]

[dependencies]
entity = { path = "entities" }
migration = { path = "migration" }

serenity = "0.11"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0"
sea-orm = { version = "0.12.6", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
cargo-watch = "8.4.1"
futures = "0.3.29"
